--- a/style.css
+++ b/style.css
@@ -408,27 +408,27 @@ font-size: 1.5rem;
 
     .cabecalho-titulo {
         font-size: 1.2rem; 
-        position: relative; 
         left: 0; 
         text-align: center; 
     }
 
     .navegacao{
-        gap:0.1rem;
-        
+        gap:0.3rem;
+        flex-direction: column; 
+
     }
     
     .navegacao-lista {
         gap: 0.5rem;
-        flex-wrap: wrap; 
+        
     }
 
     .navegacao-elemento a {
-        font-size: 0.9rem; 
+        font-size: 1rem; 
     }
 
     #contato{
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
 
     .apresentacao {
